--- a/less/index.less
+++ b/less/index.less
@@ -10,17 +10,20 @@
 // Global
 @import 'global';
 
+// Container
+@import 'container';
+
 // Header
 @import 'header';
 
 // Navigation
 @import 'navigation';
 
+// Home Page / Content
+@import 'content';
+
 // Team Section
 @import 'team';
 
 // Footer
 @import 'footer';
-
-// Home Page / Content
-@import 'home-page';
