Added max-width to team cards so they line up

--- a/less/team.less
+++ b/less/team.less
@@ -1,19 +1,19 @@
 .team {
   padding: 60px 0;
-  
+
   .team-title {
     text-align: center;
     & h2 {
       margin-bottom: 15px;
-        @media @desktop {
-          font-size: @font-size-big-responsive;
-        }
-        @media @tablet {
-          font-size: @font-size-big-responsive;
-        }
-        @media @mobile {
-          font-size: @font-size-big-responsive;
-        }
+      @media @desktop {
+        font-size: @font-size-big-responsive;
+      }
+      @media @tablet {
+        font-size: @font-size-big-responsive;
+      }
+      @media @mobile {
+        font-size: @font-size-big-responsive;
+      }
     }
   }
 
@@ -24,6 +24,7 @@
 
     .team-card {
       // width: 300px;
+      max-width: 280px;
       padding: 40px 60px;
       text-align: center;
 
