--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,11 +1,13 @@
-.btn-cta-normal(@bg-button, @font-color-button) {
-  border: 1px solid @bg-button;
+.btn-cta-normal(@bg-button, @font-color-button, @border-button) {
+  text-transform: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
+  border: 1px solid @border-button;
   background-color: @bg-button;
   color: @font-color-button;
   border-radius: 20px;
   padding: 12px 20px;
   text-align: center;
-  font-size: @font-size-normal;
   cursor: pointer;
 
   &:hover {
@@ -15,6 +17,7 @@
 }
 
 .btn-cta-wide(@bg-button, @font-color-button) {
+  font-size: @font-size-normal;
   border: 1px solid @bg-button;
   background-color: @bg-button;
   color: @font-color-button;
@@ -22,7 +25,6 @@
   padding: 12px 10px;
   width: 180px;
   text-align: center;
-  font-size: @font-size-normal;
   cursor: pointer;
 
   &:hover {
