--- a/public/css/index.css
+++ b/public/css/index.css
@@ -103,6 +103,7 @@ p {
   }
 }
 .header .header-description-container .header-description-button-container .header-description-joinnow {
+  font-size: 1.6rem;
   border: 1px solid #2ec4b6;
   background-color: #2ec4b6;
   color: #ffffff;
@@ -110,7 +111,6 @@ p {
   padding: 12px 10px;
   width: 180px;
   text-align: center;
-  font-size: 1.6rem;
   cursor: pointer;
 }
 .header .header-description-container .header-description-button-container .header-description-joinnow:hover {
@@ -134,6 +134,7 @@ p {
   }
 }
 .header .header-description-container .header-description-button-container .header-description-login {
+  font-size: 1.6rem;
   border: 1px solid #586ba4;
   background-color: #586ba4;
   color: #ffffff;
@@ -141,7 +142,6 @@ p {
   padding: 12px 10px;
   width: 180px;
   text-align: center;
-  font-size: 1.6rem;
   cursor: pointer;
 }
 .header .header-description-container .header-description-button-container .header-description-login:hover {
@@ -190,6 +190,9 @@ p {
   }
 }
 .navigation {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
   margin: 15px 0 25px 0;
   display: flex;
   flex-direction: row;
@@ -207,11 +210,11 @@ p {
 .navigation .navigation-links .navigation-link {
   color: #212529;
   text-decoration: none;
-  padding: 12px 20px;
+  padding: 15px 20px;
+  border-bottom: 1px solid #ffffff;
 }
 .navigation .navigation-links .navigation-link:hover {
-  color: #ffffff;
-  background-color: #2ec4b6;
+  border-bottom: 1px solid #2ec4b6;
 }
 @media (max-width: 500px) {
   .navigation .navigation-links .navigation-link {
@@ -253,8 +256,11 @@ p {
   text-decoration: none;
 }
 .navigation .navigation-cta .navigation-cta-login {
+  width: 100px;
+  text-align: center;
   color: #212529;
   padding: 12px 20px;
+  border: 1px solid #ffffff;
 }
 .navigation .navigation-cta .navigation-cta-login:hover {
   color: #ffffff;
@@ -262,18 +268,21 @@ p {
   border-radius: 20px;
 }
 .navigation .navigation-cta .navigation-cta-signup {
+  width: 100px;
+  text-transform: inherit;
+  font-size: inherit;
+  letter-spacing: inherit;
   border: 1px solid #2ec4b6;
-  background-color: #2ec4b6;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #2ec4b6;
   border-radius: 20px;
   padding: 12px 20px;
   text-align: center;
-  font-size: 1.6rem;
   cursor: pointer;
 }
 .navigation .navigation-cta .navigation-cta-signup:hover {
-  background-color: #ffffff;
-  color: #2ec4b6;
+  background-color: #2ec4b6;
+  color: #ffffff;
 }
 @media (max-width: 768px) {
   .navigation {
@@ -431,6 +440,7 @@ p {
   justify-content: center;
 }
 .team .team-cards .team-card {
+  max-width: 280px;
   padding: 40px 60px;
   text-align: center;
 }
@@ -465,6 +475,8 @@ p {
   }
 }
 footer {
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
   background: #2ec4b6;
   width: 100%;
   padding: 80px 0;
@@ -483,9 +495,9 @@ footer {
   }
 }
 footer img {
-  margin: 0 auto 40px;
-  max-width: 500px;
   width: 100%;
+  max-width: 500px;
+  margin: 0 auto 40px;
 }
 footer nav {
   display: flex;
@@ -522,6 +534,7 @@ footer nav a:hover {
   }
 }
 footer button {
+  font-size: 1.6rem;
   border: 1px solid #586ba4;
   background-color: #586ba4;
   color: #ffffff;
@@ -529,7 +542,6 @@ footer button {
   padding: 12px 10px;
   width: 180px;
   text-align: center;
-  font-size: 1.6rem;
   cursor: pointer;
 }
 footer button:hover {
@@ -544,7 +556,6 @@ footer button:hover {
 }
 @media (max-width: 500px) {
   footer button {
-    font-size: 2rem;
-    padding: 24px 40px;
+    width: 80%;
   }
 }
