--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,5 @@
 .navigation {
-  // todo: use variables:
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  letter-spacing: .1rem;
-  // end todo
+  .navigation-links-uppercase();
   margin: 15px 0 25px 0;
   display: flex;
   flex-direction: row;
