--- a/less/variables.less
+++ b/less/variables.less
@@ -20,6 +20,9 @@
 @font-size-big: 6.5rem;
 @font-size-normal: 1.6rem;
 
+// Font size - Nav Links
+@font-size-nav-links: 1.2rem;
+
 // Font sizes - Readable Content
 @font-size-content: 1.8rem;
 @line-height-content: 1.5;
