--- a/public/css/index.css
+++ b/public/css/index.css
@@ -190,8 +190,8 @@ p {
   }
 }
 .navigation {
-  text-transform: uppercase;
   font-size: 1.2rem;
+  text-transform: uppercase;
   letter-spacing: 0.1rem;
   margin: 15px 0 25px 0;
   display: flex;
@@ -474,7 +474,8 @@ p {
     padding: 40px 0;
   }
 }
-footer {
+.footer {
+  font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   background: #2ec4b6;
@@ -485,77 +486,88 @@ footer {
   align-items: center;
 }
 @media (max-width: 768px) {
-  footer {
+  .footer {
     padding: 80px 7.5%;
   }
 }
 @media (max-width: 500px) {
-  footer {
+  .footer {
     padding: 80px 12.5%;
   }
 }
-footer img {
+.footer .footer-img {
   width: 100%;
   max-width: 500px;
   margin: 0 auto 40px;
 }
-footer nav {
+.footer .footer-navigation-links {
   display: flex;
-  justify-content: space-around;
-  width: 60%;
+  flex: 1 1 auto;
+  justify-content: center;
   margin-bottom: 40px;
 }
-@media (max-width: 768px) {
-  footer nav {
-    width: 100%;
-  }
-}
 @media (max-width: 500px) {
-  footer nav {
+  .footer .footer-navigation-links {
     flex-direction: column;
     align-items: center;
   }
 }
-footer nav a {
+.footer .footer-navigation-links .footer-navigation-link {
   color: #ffffff;
   text-decoration: none;
+  padding: 15px 20px;
+  border-bottom: 1px solid #2ec4b6;
 }
-footer nav a:hover {
-  text-decoration: underline;
-  color: #586ba4;
+.footer .footer-navigation-links .footer-navigation-link:hover {
+  text-decoration: none;
+  border-bottom: 1px solid #586ba4;
+}
+@media (max-width: 768px) {
+  .footer .footer-navigation-links .footer-navigation-link {
+    padding: 15px 20px;
+  }
 }
 @media (max-width: 500px) {
-  footer nav a {
-    font-size: 2.4rem;
-    margin-bottom: 20px;
+  .footer .footer-navigation-links .footer-navigation-link {
+    padding: 15px 20px;
   }
-  footer nav a:last-of-type {
+  .footer .footer-navigation-links .footer-navigation-link:last-of-type {
     margin-bottom: 0;
   }
 }
-footer button {
+@media (max-width: 500px) {
+  .footer .footer-button-anchor {
+    width: 90%;
+  }
+}
+.footer .footer-button {
   font-size: 1.6rem;
   border: 1px solid #586ba4;
   background-color: #586ba4;
-  color: #ffffff;
+  color: #2ec4b6;
   border-radius: 20px;
   padding: 12px 10px;
   width: 180px;
   text-align: center;
   cursor: pointer;
+  color: #ffffff;
 }
-footer button:hover {
-  background-color: #ffffff;
+.footer .footer-button:hover {
+  background-color: #2ec4b6;
   color: #586ba4;
 }
 @media (max-width: 500px) {
-  footer button {
+  .footer .footer-button {
     padding: 20px 10px;
     width: 100%;
   }
 }
+.footer .footer-button:hover {
+  color: #ffffff;
+  border-color: #ffffff;
+}
 @media (max-width: 500px) {
-  footer button {
-    width: 80%;
+  .footer .footer-button {
+    width: 100%;
   }
 }
