--- a/less/header.less
+++ b/less/header.less
@@ -52,7 +52,7 @@
       }
 
       .header-description-joinnow {
-        .btn-cta-wide(@bg-button, @white);
+        .btn-cta-wide(@bg-button, @white, @bg-button);
       }
       
       // login
@@ -66,7 +66,7 @@
       }
 
       .header-description-login {
-        .btn-cta-wide(@secondary, @white);
+        .btn-cta-wide(@secondary, @white, @secondary);
       }
 
       @media @mobile {
