--- a/less/team.less
+++ b/less/team.less
@@ -22,11 +22,26 @@
     flex-flow: row wrap;
     justify-content: center;
 
-    .team-card {
-      // width: 300px;
+    .team-card-link {
       max-width: 280px;
+      color: @font-color-content;
       padding: 40px 60px;
       text-align: center;
+      text-decoration: none;
+      transition: .3s;
+      &:hover {
+        transform: scale(1.2)
+      }
+      @media @tablet {
+        padding: 30px 0;
+        width: 50%;
+      }
+      @media @mobile {
+        padding: 15px 30px;
+        width: 50%;
+      }
+    }
+    .team-card {
 
       .team-member-title {
         margin: 0;
@@ -39,16 +54,13 @@
       .team-img {
         border-radius: 50%;
         width: 100%;
-        max-width: 140px;
+        max-width: 200px;
         height: auto;
-      }
-      @media @tablet {
-        padding: 30px 0;
-        width: 50%;
-      }
-      @media @mobile {
-        padding: 15px 30px;
-        width: 50%;
+        border: 3px solid @primary;
+        
+        &:hover {
+
+        }
       }
     }
   }
