--- a/public/css/index.css
+++ b/public/css/index.css
@@ -439,10 +439,28 @@ p {
   flex-flow: row wrap;
   justify-content: center;
 }
-.team .team-cards .team-card {
+.team .team-cards .team-card-link {
   max-width: 280px;
+  color: #212529;
   padding: 40px 60px;
   text-align: center;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.team .team-cards .team-card-link:hover {
+  transform: scale(1.2);
+}
+@media (max-width: 768px) {
+  .team .team-cards .team-card-link {
+    padding: 30px 0;
+    width: 50%;
+  }
+}
+@media (max-width: 500px) {
+  .team .team-cards .team-card-link {
+    padding: 15px 30px;
+    width: 50%;
+  }
 }
 .team .team-cards .team-card .team-member-title {
   margin: 0;
@@ -454,20 +472,9 @@ p {
 .team .team-cards .team-card .team-img {
   border-radius: 50%;
   width: 100%;
-  max-width: 140px;
+  max-width: 200px;
   height: auto;
-}
-@media (max-width: 768px) {
-  .team .team-cards .team-card {
-    padding: 30px 0;
-    width: 50%;
-  }
-}
-@media (max-width: 500px) {
-  .team .team-cards .team-card {
-    padding: 15px 30px;
-    width: 50%;
-  }
+  border: 3px solid #2ec4b6;
 }
 @media (max-width: 500px) {
   .team {
