--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,11 @@
     padding: 0 20px 0 0;
   }
 
+  .navigation-logo-fixed {
+    position: fixed;
+    display: none;
+  }
+
   .navigation-links {
     display: flex;
     flex-direction: row;
@@ -67,7 +72,7 @@
       color: @font-color-content;
       padding: 12px 20px;
       border: 1px solid @white;
-      
+
       &:hover {
         color: @white;
         background-color: @secondary;
@@ -80,7 +85,7 @@
     }
   } // .navigation-cta
 
-  @media @tablet{
+  @media @tablet {
     flex-direction: column;
     align-items: center;
   }
@@ -114,7 +119,7 @@
       background-color: @danger;
       color: @white;
       &:hover {
-        color: @danger
+        color: @danger;
       }
     }
 
@@ -146,5 +151,5 @@
 }
 
 .rotate {
-  transform: rotate(90deg)
+  transform: rotate(90deg);
 }
