--- a/less/footer.less
+++ b/less/footer.less
@@ -2,7 +2,7 @@
   .navigation-links-uppercase();
   background: @bg-footer;
   width: 100%;
-  padding: 80px 0;
+  padding: 140px 0 40px;
 
   display: flex;
   flex-direction: column;
@@ -73,5 +73,19 @@
     @media @mobile {
       width: 100%;
     }
+  }
+  .footer-copyright {
+    color: @secondary;
+    text-align: center;
+    margin-top: 50px;
+    a {
+      text-decoration: none;
+    }
+  }
+  .lambda {
+    color: @dark-grey;
+  }
+  .white {
+    color: @white;
   }
 } // footer
