--- a/less/team.less
+++ b/less/team.less
@@ -1,5 +1,5 @@
 .team {
-  padding: 60px 0;
+  padding: 120px 0;
 
   .team-title {
     text-align: center;
@@ -23,17 +23,15 @@
     justify-content: center;
 
     .team-card-link {
-      max-width: 280px;
       color: @font-color-content;
-      padding: 40px 60px;
+      padding: 30px 50px;
       text-align: center;
       text-decoration: none;
-      transition: .3s;
+      transition: 0.3s;
       &:hover {
-        transform: scale(1.2)
+        transform: scale(1.2);
       }
       @media @tablet {
-        padding: 30px 0;
         width: 50%;
       }
       @media @mobile {
@@ -42,7 +40,6 @@
       }
     }
     .team-card {
-
       .team-member-title {
         margin: 0;
         font-weight: 400;
@@ -50,21 +47,57 @@
       .team-member-name {
         margin: 0;
       }
+      .team-image {
+        position: relative;
+      }
+      // How TO - Image Hover Overlay:
+      // source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_fade
+      .overlay {
+        position: absolute;
+        top: -2px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: 0.5s ease;
+        clip-path: circle(50% at 50% 50%);
+        background-color: hsla(@primary, 0.6);
+      }
 
+      &:hover .overlay {
+        opacity: 1;
+      }
+
+      .text {
+        color: @black;
+        font-weight: 300;
+        font-size: 1rem;
+        text-transform: uppercase;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        text-align: center;
+        transform: translate(-50%, -50%);
+
+        .github-icon {
+          width: 100%;
+        }
+      }
       .team-img {
         border-radius: 50%;
         width: 100%;
         max-width: 200px;
         height: auto;
         border: 3px solid @primary;
-        
-        &:hover {
-
-        }
       }
     }
   }
+  @media @desktop {
+    padding: 80px 0;
+  }
   @media @mobile {
-    padding: 40px 0;
+    padding: 70px 0;
   }
 }
