--- a/less/global.less
+++ b/less/global.less
@@ -6,7 +6,7 @@ body {
   overflow-y: scroll;
   font-family: @font-content;
   font-size: @font-size-normal;
-  line-height: 1.25;
+  line-height: @line-height-normal;
 }
 
 h1 {
