--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,6 +2,9 @@
   font-size: @font-size-nav-links;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
+  @media @tablet {
+    font-size: @font-size-nav-links-small;
+  }
 }
 
 .btn-cta-normal(@bg-button, @font-color-button, @border-button) {
