--- a/less/footer.less
+++ b/less/footer.less
@@ -8,14 +8,6 @@
   flex-direction: column;
   align-items: center;
 
-  @media @tablet {
-    padding: 80px 7.5%;
-  }
-
-  @media @mobile {
-    padding: 80px 12.5%;
-  }
-
   .footer-img {
     width: 100%;
     max-width: 500px;
@@ -74,7 +66,10 @@
       width: 100%;
     }
   }
+
   .footer-copyright {
+    padding: 0 20px;
+    line-height: @line-height-content;
     color: @secondary;
     text-align: center;
     margin-top: 50px;
@@ -82,10 +77,20 @@
       text-decoration: none;
     }
   }
+
   .lambda {
     color: @dark-grey;
   }
+
   .white {
     color: @white;
+  }
+
+  @media @tablet {
+    padding: 140px 7.5% 40px;
+  }
+
+  @media @mobile {
+    padding: 80px 12.5% 40px;
   }
 } // footer
