--- a/less/header.less
+++ b/less/header.less
@@ -4,13 +4,32 @@
   border-bottom: 1px solid @border-section;
 
   h1 {
-    line-height: 1.1;
+    line-height: @line-height-header-h1;
     @media @tablet {
       font-size: @font-size-big-responsive;
     }
     @media @mobile {
-      margin-top: 30px;
+      margin-top: 40px;
       font-size: @font-size-big-responsive;
+    }
+  }
+
+  p {
+    font-size: @font-size-content;
+    line-height: @line-height-normal;
+    margin: 15px 0 20px 0;
+    
+    @media @desktop {
+      line-height: @line-height-normal;
+    }
+    @media @tablet {
+      font-size: @font-size-normal;
+      line-height: @line-height-normal;
+    }
+    @media @mobile{
+      margin: 40px 0;
+      font-size: @font-size-content;
+      line-height: @line-height-normal;
     }
   }
 
@@ -18,7 +37,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 80px 0 100px 0;
+    padding: 80px 0 130px 0;
 
     @media @tablet {
       padding: 50px 0 60px 0;
@@ -58,7 +77,7 @@
       // login
       .header-description-login-anchor {
         display: none;
-        margin: 20px 0;
+        margin: 0 0 20px 0;
         @media @mobile {
           display: block;
           width: 80%;
