--- a/less/variables.less
+++ b/less/variables.less
@@ -22,13 +22,19 @@
 
 // Font size - Nav Links
 @font-size-nav-links: 1.2rem;
+@font-size-nav-links-small: 1.1rem;
 
 // Font sizes - Readable Content
 @font-size-content: 1.8rem;
-@line-height-content: 1.5;
 
 // Font sizes - Tablet & Mobile Viewport
 @font-size-big-responsive: 4.8rem;
+
+// Line heights
+@line-height-normal: 1.25;
+@line-height-content: 1.75;
+@line-height-content-h2: 1.15;
+@line-height-header-h1: 1.1;
 
 // Content assignments
 @font-color-content: @black;
