--- a/public/css/index.css
+++ b/public/css/index.css
@@ -65,15 +65,38 @@ p {
 }
 @media (max-width: 500px) {
   .header h1 {
-    margin-top: 30px;
+    margin-top: 40px;
     font-size: 4.8rem;
+  }
+}
+.header p {
+  font-size: 1.8rem;
+  line-height: 1.25;
+  margin: 15px 0 20px 0;
+}
+@media (max-width: 960px) {
+  .header p {
+    line-height: 1.25;
+  }
+}
+@media (max-width: 768px) {
+  .header p {
+    font-size: 1.6rem;
+    line-height: 1.25;
+  }
+}
+@media (max-width: 500px) {
+  .header p {
+    margin: 40px 0;
+    font-size: 1.8rem;
+    line-height: 1.25;
   }
 }
 .header .header-main {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 80px 0 100px 0;
+  padding: 80px 0 130px 0;
 }
 @media (max-width: 768px) {
   .header .header-main {
@@ -126,7 +149,7 @@ p {
 }
 .header .header-description-container .header-description-button-container .header-description-login-anchor {
   display: none;
-  margin: 20px 0;
+  margin: 0 0 20px 0;
 }
 @media (max-width: 500px) {
   .header .header-description-container .header-description-button-container .header-description-login-anchor {
@@ -200,6 +223,11 @@ p {
   justify-content: space-between;
   position: relative;
 }
+@media (max-width: 768px) {
+  .navigation {
+    font-size: 1.1rem;
+  }
+}
 .navigation .navigation-logo {
   padding: 0 20px 0 0;
 }
@@ -209,7 +237,7 @@ p {
   z-index: 1;
 }
 .navigation .navigation-logo-scroll {
-  padding: 0 20px 7px 0;
+  padding: 0 20px 10px 0;
   border-bottom: 1px solid #eee;
   border-right: 1px solid #eee;
 }
@@ -366,7 +394,10 @@ p {
   padding: 150px 0;
   border-bottom: 1px solid #eee;
   font-size: 1.8rem;
-  line-height: 1.5;
+  line-height: 1.75;
+}
+.content-panel h2 {
+  line-height: 1.15;
 }
 @media (max-width: 960px) {
   .content-panel h2 {
@@ -380,6 +411,7 @@ p {
 }
 @media (max-width: 500px) {
   .content-panel h2 {
+    margin: 30px 0 0 0;
     font-size: 4.8rem;
   }
 }
@@ -405,6 +437,17 @@ p {
 .content-panel .content-image-img {
   width: 100%;
   height: auto;
+}
+@media (max-width: 960px) {
+  .content-panel {
+    padding: 120px 0;
+  }
+}
+@media (max-width: 768px) {
+  .content-panel {
+    font-size: 1.6rem;
+    padding: 80px 0;
+  }
 }
 @media (max-width: 500px) {
   .content-panel {
@@ -452,30 +495,27 @@ p {
 }
 .team .team-cards .team-card-link {
   color: #212529;
-  padding: 30px 50px;
-  text-align: center;
   text-decoration: none;
   transition: 0.3s;
 }
 .team .team-cards .team-card-link:hover {
   transform: scale(1.2);
 }
-@media (max-width: 768px) {
-  .team .team-cards .team-card-link {
-    width: 50%;
-  }
-}
-@media (max-width: 500px) {
-  .team .team-cards .team-card-link {
-    padding: 15px 30px;
-    width: 50%;
-  }
-}
-.team .team-cards .team-card .team-member-title {
-  margin: 0;
-  font-weight: 400;
+.team .team-cards .team-card {
+  display: flex;
+  justify-content: center;
+  padding: 30px 40px;
 }
 .team .team-cards .team-card .team-member-name {
+  text-align: center;
+  margin: 0;
+}
+.team .team-cards .team-card .team-member-title {
+  color: #586ba4;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  text-align: center;
   margin: 0;
 }
 .team .team-cards .team-card .team-image {
@@ -489,6 +529,7 @@ p {
   right: 0;
   height: 100%;
   width: 100%;
+  max-width: 200px;
   opacity: 0;
   transition: 0.5s ease;
   clip-path: circle(50% at 50% 50%);
@@ -497,7 +538,7 @@ p {
 .team .team-cards .team-card:hover .overlay {
   opacity: 1;
 }
-.team .team-cards .team-card .text {
+.team .team-cards .team-card .overlay-text {
   color: #212529;
   font-weight: 300;
   font-size: 1rem;
@@ -508,7 +549,7 @@ p {
   text-align: center;
   transform: translate(-50%, -50%);
 }
-.team .team-cards .team-card .text .github-icon {
+.team .team-cards .team-card .overlay-text .github-icon {
   width: 100%;
 }
 .team .team-cards .team-card .team-img {
@@ -516,16 +557,32 @@ p {
   width: 100%;
   max-width: 200px;
   height: auto;
-  border: 3px solid #2ec4b6;
+  border: 5px solid #2ec4b6;
+}
+@media (max-width: 768px) {
+  .team .team-cards .team-card {
+    width: 50%;
+  }
+}
+@media (max-width: 500px) {
+  .team .team-cards .team-card {
+    padding: 10px 20px;
+    width: 50%;
+  }
 }
 @media (max-width: 960px) {
   .team {
-    padding: 80px 0;
+    padding: 120px 0;
+  }
+}
+@media (max-width: 768px) {
+  .team {
+    padding: 100px 0;
   }
 }
 @media (max-width: 500px) {
   .team {
-    padding: 70px 0;
+    padding: 60px 0;
   }
 }
 .footer {
@@ -541,12 +598,7 @@ p {
 }
 @media (max-width: 768px) {
   .footer {
-    padding: 80px 7.5%;
-  }
-}
-@media (max-width: 500px) {
-  .footer {
-    padding: 80px 12.5%;
+    font-size: 1.1rem;
   }
 }
 .footer .footer-img {
@@ -626,6 +678,8 @@ p {
   }
 }
 .footer .footer-copyright {
+  padding: 0 20px;
+  line-height: 1.75;
   color: #586ba4;
   text-align: center;
   margin-top: 50px;
@@ -638,4 +692,14 @@ p {
 }
 .footer .white {
   color: #ffffff;
+}
+@media (max-width: 768px) {
+  .footer {
+    padding: 140px 7.5% 40px;
+  }
+}
+@media (max-width: 500px) {
+  .footer {
+    padding: 80px 12.5% 40px;
+  }
 }
