team section styling

--- a/less/content.less
+++ b/less/content.less
@@ -7,6 +7,10 @@
   border-bottom: 1px solid @border-section;
   font-size: @font-size-content;
   line-height: @line-height-content;
+
+  &:last-child {
+    border: none;
+  }
   
   h2 {
     line-height: @line-height-content-h2;
